tests/ui/issues/issue-46472.stderr
error[E0515]: cannot return reference to temporary value
  --> $DIR/issue-46472.rs:2:5
   |
LL |     &mut 4
   |     ^^^^^-
   |     |    |
   |     |    temporary value created here
   |     returns a reference to data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
